# static_malloc

./: .gitignore  CMakeLists.txt  README.md  config.sh  main.c
include/: static_malloc.h  static_malloc_sizes.h
tests/: CMakeLists.txt  stalloc_test_char.c  stalloc_test_double.c  stalloc_test_int.c
